resources/app-sre-stage/telemeter-stage/conprof.route.yaml
# TODO(kakkoyun): Delete while migrating.
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: conprof
  name: conprof
spec:
  host: conprof.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: conprof
    weight: 100
  wildcardPolicy: None
