resources/app-sre-stage/telemeter-stage/infogw-data.route.yaml
# TODO(kakkoyun): Move while migrating.
# This route originally was for the telemeter-prometheus
# We are still keeping it around to redirect to the new thanos querier service until docs are updated
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  name: infogw-data
spec:
  host: infogw-data.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-token-refresher
    weight: 100
  wildcardPolicy: None
