resources/app-sre-stage/telemeter-stage/observatorium-api-stage.route.yaml
# TODO(kakkoyun): Delete while migrating.
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: observatorium-api
  name: observatorium-api
spec:
  host: observatorium.api.stage.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
