resources/app-sre-stage/telemeter-stage/observatorium-thanos-compact-stage.route.yaml
# TODO(kakkoyun): Delete while migrating.
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: observatorium-thanos-compact
  name: observatorium-thanos-compact
spec:
  host: observatorium-thanos-compact.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-compact
    weight: 100
  wildcardPolicy: None
