resources/app-sre-stage/telemeter-stage/observatorium-thanos-querier-cache-stage.route.yaml
# TODO(kakkoyun): Delete while migrating.
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: "15m"
  labels:
    app: observatorium-querier-cache
  name: observatorium-thanos-querier-cache
spec:
  host: infogw-proxy.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-token-refresher
    weight: 100
  wildcardPolicy: None
