resources/app-sre-stage/telemeter-stage/observatorium-thanos-querier-stage.route.yaml

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: thanos-querier
  name: observatorium-thanos-querier
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-query
    weight: 100
  wildcardPolicy: None
