resources/app-sre-stage/telemeter-stage/prometheus-telemeter.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  name: prometheus-telemeter
spec:
  host: infogw-data.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-telemeter
    weight: 100
  wildcardPolicy: None
