resources/app-sre-stage/telemeter-stage/telemeter-server-authorize.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: telemeter-server-authorize
spec:
  host: infogw.api.stage.openshift.com
  path: /authorize
  port:
    targetPort: external
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-server
    weight: 100
  wildcardPolicy: None
