resources/app-sre-stage/telemeter-stage/telemeter-token-refresher-stage.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  name: telemeter-token-refresher
spec:
  host: telemeter-token-refresher.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-token-refresher
    weight: 100
  wildcardPolicy: None
